fix: security & chores (#8)
* fix: Database & CORS security

* fix: DTO validation

* chore: Remove unused DTO